# yggstack-ng

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
android-build/kotlin/uniffi/yggstack_mobile/: yggstack_mobile.kt
crates/yggstack/: Cargo.toml  build.rs
crates/yggstack-mobile/: ANDROID_MIGRATION.md  Cargo.toml  build.rs
crates/yggstack-mobile/scripts/: build_android.sh
crates/yggstack-mobile/src/: lib.rs  mobile.rs  yggstack_mobile.udl
crates/yggstack/src/: config.rs  forward.rs  lib.rs  main.rs  mapping.rs  resolver.rs  socks.rs
crates/yggstack/src/forward/: tcp.rs  udp.rs
crates/yggstack/src/netstack/: device.rs  frag.rs  mod.rs
