[package]
name = "yggstack-mobile"
version = "0.1.0"
edition = "2021"
description = "Mobile UniFFI bindings for yggstack"
license = "MPL-2.0"

[lib]
name = "yggstack_mobile"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
test = false

[dependencies]
yggstack   = { path = "../yggstack" }
yggdrasil  = { git = "https://github.com/Revertron/Yggdrasil-ng", default-features = false }

tokio      = { version = "1", features = ["full"] }
uniffi     = { version = "0.29", features = ["build", "cli"] }
hex        = "0.4"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "1"
thiserror  = "2"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
